Gowalla dataset Implemented

--- a/ss.ipynb
+++ b/ss.ipynb
@@ -46,30 +46,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('/home/jiwon/Jiwon_Rsch/mount/pygbased/data/Gowalla/raw/filtered_total.txt',sep = \" \" ,header =None, index_col = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4169</td>\n",
+       "      <td>2010-10-19T23:55:27Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>31533</td>\n",
+       "      <td>2010-10-18T22:17:43Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>29074</td>\n",
+       "      <td>2010-10-17T23:42:03Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>2010-10-17T19:26:05Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>40979</td>\n",
+       "      <td>2010-10-16T18:50:42Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027459</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>13173</td>\n",
+       "      <td>2010-04-27T04:32:19Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027460</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>392</td>\n",
+       "      <td>2010-03-14T18:13:45Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027461</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>30837</td>\n",
+       "      <td>2010-03-13T03:29:55Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027462</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>10578</td>\n",
+       "      <td>2010-02-15T03:33:42Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027463</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>24374</td>\n",
+       "      <td>2010-02-13T07:49:03Z</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1027464 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "HeteroData(\n",
-       "  user={ num_nodes=52643 },\n",
-       "  book={ num_nodes=91599 },\n",
-       "  (user, rates, book)={\n",
-       "    edge_index=[2, 2380730],\n",
-       "    edge_label_index=[2, 603378],\n",
-       "  },\n",
-       "  (book, rated_by, user)={ edge_index=[2, 2380730] }\n",
-       ")"
+       "             0      1                     2\n",
+       "0            0   4169  2010-10-19T23:55:27Z\n",
+       "1            0  31533  2010-10-18T22:17:43Z\n",
+       "2            0  29074  2010-10-17T23:42:03Z\n",
+       "3            0   2572  2010-10-17T19:26:05Z\n",
+       "4            0  40979  2010-10-16T18:50:42Z\n",
+       "...        ...    ...                   ...\n",
+       "1027459  29857  13173  2010-04-27T04:32:19Z\n",
+       "1027460  29857    392  2010-03-14T18:13:45Z\n",
+       "1027461  29857  30837  2010-03-13T03:29:55Z\n",
+       "1027462  29857  10578  2010-02-15T03:33:42Z\n",
+       "1027463  29857  24374  2010-02-13T07:49:03Z\n",
+       "\n",
+       "[1027464 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset[0]"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40988"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[1].unique())"
    ]
   },
   {
@@ -77,30 +208,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "1번 트레이닝, 1번 벨텟, 2번 ....\n",
-    "1번 까지 총 num node\n",
-    "2번 들어오는 노드를 합친 num-node\n",
-    "3번 기존에 상호작용한 데이터\n",
-    "user - consumed \n",
-    "벨텟에서 기존에 안들어온 노드 제거\n",
-    "\n",
-    "\n",
-    "user - item - time\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1. 모델 파라미터 저장\n",
-    "2. 각 메소드에 필요한 정보 저장\n",
-    "3. 새로운 모델 각 inc 단계마다 선언\n",
-    "4. 선언한 모델에 기존의 파라미터 대입\n",
-    "5. 밸 테스트떄 전단계에서 이미 소모한 데이터 고려하지 않기\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
