--- a/ss.ipynb
+++ b/ss.ipynb
@@ -46,161 +46,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('/home/jiwon/Jiwon_Rsch/mount/pygbased/data/Gowalla/raw/filtered_total.txt',sep = \" \" ,header =None, index_col = None)"
+    "df = pd.read_csv('./data/Gowalla/raw/filtered_total.txt',sep = \" \" ,header =None, index_col = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4169</td>\n",
-       "      <td>2010-10-19T23:55:27Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>31533</td>\n",
-       "      <td>2010-10-18T22:17:43Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>29074</td>\n",
-       "      <td>2010-10-17T23:42:03Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2572</td>\n",
-       "      <td>2010-10-17T19:26:05Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>40979</td>\n",
-       "      <td>2010-10-16T18:50:42Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1027459</th>\n",
-       "      <td>29857</td>\n",
-       "      <td>13173</td>\n",
-       "      <td>2010-04-27T04:32:19Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1027460</th>\n",
-       "      <td>29857</td>\n",
-       "      <td>392</td>\n",
-       "      <td>2010-03-14T18:13:45Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1027461</th>\n",
-       "      <td>29857</td>\n",
-       "      <td>30837</td>\n",
-       "      <td>2010-03-13T03:29:55Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1027462</th>\n",
-       "      <td>29857</td>\n",
-       "      <td>10578</td>\n",
-       "      <td>2010-02-15T03:33:42Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1027463</th>\n",
-       "      <td>29857</td>\n",
-       "      <td>24374</td>\n",
-       "      <td>2010-02-13T07:49:03Z</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1027464 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             0      1                     2\n",
-       "0            0   4169  2010-10-19T23:55:27Z\n",
-       "1            0  31533  2010-10-18T22:17:43Z\n",
-       "2            0  29074  2010-10-17T23:42:03Z\n",
-       "3            0   2572  2010-10-17T19:26:05Z\n",
-       "4            0  40979  2010-10-16T18:50:42Z\n",
-       "...        ...    ...                   ...\n",
-       "1027459  29857  13173  2010-04-27T04:32:19Z\n",
-       "1027460  29857    392  2010-03-14T18:13:45Z\n",
-       "1027461  29857  30837  2010-03-13T03:29:55Z\n",
-       "1027462  29857  10578  2010-02-15T03:33:42Z\n",
-       "1027463  29857  24374  2010-02-13T07:49:03Z\n",
-       "\n",
-       "[1027464 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df"
+    "df.sort_values(by = 2)\n",
+    "df[2] = pd.to_datetime(df[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40988"
+       "[             0      1                         2\n",
+       " 774         11   2793 2010-01-30 21:15:55+00:00\n",
+       " 775         11  12667 2010-01-23 00:41:10+00:00\n",
+       " 776         11   9245 2010-01-22 18:37:55+00:00\n",
+       " 777         11   8377 2010-01-15 17:33:44+00:00\n",
+       " 778         11  10896 2010-01-12 03:16:40+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1026049  29775  23034 2010-01-25 09:30:27+00:00\n",
+       " 1026450  29797  18679 2010-01-30 01:17:38+00:00\n",
+       " 1026463  29798  12424 2010-01-28 21:30:51+00:00\n",
+       " 1026464  29798  26010 2010-01-08 15:48:49+00:00\n",
+       " 1026465  29798  21802 2010-01-06 22:04:07+00:00\n",
+       " \n",
+       " [49702 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 494          3   7834 2010-02-26 17:18:30+00:00\n",
+       " 495          3  16038 2010-02-26 01:27:57+00:00\n",
+       " 496          3   8230 2010-02-25 18:13:37+00:00\n",
+       " 497          3    173 2010-02-24 18:28:53+00:00\n",
+       " 498          3   1063 2010-02-24 03:11:44+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027157  29836  15598 2010-02-02 11:41:40+00:00\n",
+       " 1027158  29836  16530 2010-02-01 23:16:44+00:00\n",
+       " 1027159  29836  17130 2010-02-01 23:15:39+00:00\n",
+       " 1027462  29857  10578 2010-02-15 03:33:42+00:00\n",
+       " 1027463  29857  24374 2010-02-13 07:49:03+00:00\n",
+       " \n",
+       " [44953 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 484          3  16644 2010-03-14 20:08:41+00:00\n",
+       " 485          3   4067 2010-03-10 07:41:11+00:00\n",
+       " 486          3   3567 2010-03-08 01:25:19+00:00\n",
+       " 487          3  28372 2010-03-06 18:44:13+00:00\n",
+       " 488          3  22504 2010-03-04 15:08:53+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027197  29839  31291 2010-03-20 22:13:35+00:00\n",
+       " 1027386  29851   8912 2010-03-27 18:20:29+00:00\n",
+       " 1027387  29851  30024 2010-03-22 00:26:28+00:00\n",
+       " 1027460  29857    392 2010-03-14 18:13:45+00:00\n",
+       " 1027461  29857  30837 2010-03-13 03:29:55+00:00\n",
+       " \n",
+       " [105210 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 477          2   3017 2010-04-30 04:52:16+00:00\n",
+       " 603          7   6083 2010-04-24 19:13:23+00:00\n",
+       " 825         12   1289 2010-04-28 23:33:24+00:00\n",
+       " 826         12    284 2010-04-27 18:53:58+00:00\n",
+       " 827         12    795 2010-04-27 18:45:40+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027430  29855   2299 2010-04-24 23:24:35+00:00\n",
+       " 1027431  29855   2625 2010-04-24 23:13:09+00:00\n",
+       " 1027432  29855   2297 2010-04-24 23:12:29+00:00\n",
+       " 1027458  29857   1003 2010-04-28 06:19:35+00:00\n",
+       " 1027459  29857  13173 2010-04-27 04:32:19+00:00\n",
+       " \n",
+       " [82832 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 111          0     42 2010-05-30 06:17:57+00:00\n",
+       " 112          0   2760 2010-05-23 16:50:50+00:00\n",
+       " 113          0     13 2010-05-22 17:50:55+00:00\n",
+       " 114          0  34457 2010-05-22 02:49:04+00:00\n",
+       " 445          2  12679 2010-05-31 22:18:34+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027368  29850  23655 2010-05-30 17:12:30+00:00\n",
+       " 1027376  29851  28746 2010-05-15 21:44:47+00:00\n",
+       " 1027377  29851   6985 2010-05-08 21:23:47+00:00\n",
+       " 1027456  29857  32895 2010-05-31 08:12:22+00:00\n",
+       " 1027457  29857  25704 2010-05-20 19:48:09+00:00\n",
+       " \n",
+       " [85386 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 91           0    243 2010-06-27 01:06:11+00:00\n",
+       " 92           0   3926 2010-06-26 22:52:34+00:00\n",
+       " 93           0   5697 2010-06-24 16:54:36+00:00\n",
+       " 94           0   8847 2010-06-21 13:27:02+00:00\n",
+       " 95           0  19673 2010-06-20 01:32:26+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027391  29852  15413 2010-06-10 00:20:46+00:00\n",
+       " 1027392  29852    356 2010-06-10 00:20:20+00:00\n",
+       " 1027393  29852  36052 2010-06-07 20:36:08+00:00\n",
+       " 1027423  29855   8590 2010-06-08 21:41:00+00:00\n",
+       " 1027455  29857  20962 2010-06-06 07:41:08+00:00\n",
+       " \n",
+       " [89351 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 77           0   9596 2010-07-31 01:49:44+00:00\n",
+       " 78           0   4285 2010-07-26 13:36:43+00:00\n",
+       " 79           0  10395 2010-07-22 01:40:44+00:00\n",
+       " 80           0  12515 2010-07-21 02:01:23+00:00\n",
+       " 81           0  26031 2010-07-21 00:23:42+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027409  29853  19933 2010-07-10 17:28:16+00:00\n",
+       " 1027410  29853  37942 2010-07-10 13:54:29+00:00\n",
+       " 1027411  29853  20508 2010-07-09 19:20:06+00:00\n",
+       " 1027412  29853  23487 2010-07-05 12:51:46+00:00\n",
+       " 1027454  29857  29306 2010-07-18 21:02:43+00:00\n",
+       " \n",
+       " [113600 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 55           0  32696 2010-08-30 14:17:05+00:00\n",
+       " 56           0    312 2010-08-30 00:11:01+00:00\n",
+       " 57           0  40674 2010-08-28 03:08:50+00:00\n",
+       " 58           0   1296 2010-08-28 02:40:57+00:00\n",
+       " 59           0    132 2010-08-26 22:47:32+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027422  29854  14931 2010-08-30 19:14:39+00:00\n",
+       " 1027450  29857  21084 2010-08-14 04:38:16+00:00\n",
+       " 1027451  29857  28123 2010-08-14 04:01:46+00:00\n",
+       " 1027452  29857  28655 2010-08-13 22:30:50+00:00\n",
+       " 1027453  29857   6099 2010-08-11 23:39:47+00:00\n",
+       " \n",
+       " [130743 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 35           0  25089 2010-09-30 23:23:22+00:00\n",
+       " 36           0   2345 2010-09-28 23:47:07+00:00\n",
+       " 37           0  19532 2010-09-26 16:43:45+00:00\n",
+       " 38           0  39116 2010-09-25 02:00:54+00:00\n",
+       " 39           0   9094 2010-09-22 23:33:37+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027417  29854  24132 2010-09-10 13:59:54+00:00\n",
+       " 1027418  29854  32424 2010-09-02 10:59:49+00:00\n",
+       " 1027419  29854  23107 2010-09-01 10:44:11+00:00\n",
+       " 1027420  29854  21294 2010-09-01 10:16:05+00:00\n",
+       " 1027421  29854  26138 2010-09-01 10:14:21+00:00\n",
+       " \n",
+       " [144038 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 0            0   4169 2010-10-19 23:55:27+00:00\n",
+       " 1            0  31533 2010-10-18 22:17:43+00:00\n",
+       " 2            0  29074 2010-10-17 23:42:03+00:00\n",
+       " 3            0   2572 2010-10-17 19:26:05+00:00\n",
+       " 4            0  40979 2010-10-16 18:50:42+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1027445  29856  26071 2010-10-14 03:36:25+00:00\n",
+       " 1027446  29856  12246 2010-10-14 00:40:14+00:00\n",
+       " 1027447  29856     32 2010-10-13 19:36:48+00:00\n",
+       " 1027448  29856   9888 2010-10-13 02:34:37+00:00\n",
+       " 1027449  29856  21869 2010-10-13 01:02:48+00:00\n",
+       " \n",
+       " [126822 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 686          9   3903 2009-11-26 06:44:32+00:00\n",
+       " 687          9  17700 2009-11-26 06:05:08+00:00\n",
+       " 688          9  20281 2009-11-26 06:04:30+00:00\n",
+       " 1355        14  14185 2009-11-22 22:20:26+00:00\n",
+       " 1356        14   2524 2009-11-22 18:06:11+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1023619  29644    127 2009-11-29 08:10:39+00:00\n",
+       " 1023620  29644    298 2009-11-29 06:32:40+00:00\n",
+       " 1023621  29644    156 2009-11-29 05:29:28+00:00\n",
+       " 1023622  29644   9441 2009-11-29 03:55:53+00:00\n",
+       " 1024687  29698    994 2009-11-08 06:20:16+00:00\n",
+       " \n",
+       " [18694 rows x 3 columns],\n",
+       "              0      1                         2\n",
+       " 683          9   5095 2009-12-02 22:59:40+00:00\n",
+       " 684          9   3843 2009-12-01 22:40:06+00:00\n",
+       " 685          9   3841 2009-12-01 22:39:10+00:00\n",
+       " 786         11  22141 2009-12-31 03:58:20+00:00\n",
+       " 787         11  21514 2009-12-29 19:55:42+00:00\n",
+       " ...        ...    ...                       ...\n",
+       " 1025617  29749  11682 2009-12-30 20:51:02+00:00\n",
+       " 1025618  29749  17245 2009-12-30 16:54:31+00:00\n",
+       " 1025619  29749  16563 2009-12-30 16:41:13+00:00\n",
+       " 1025620  29749  11136 2009-12-29 18:59:21+00:00\n",
+       " 1025621  29749  13134 2009-12-29 16:01:50+00:00\n",
+       " \n",
+       " [36133 rows x 3 columns]]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df[1].unique())"
+    "month_df = []\n",
+    "for i in range(12):\n",
+    "    month_df.append(df.loc[df[2].dt.month == i+1])\n",
+    "month_df"
    ]
   },
   {
@@ -208,7 +259,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "month_df"
+   ]
   }
  ],
  "metadata": {
