--- a/basic_LightGCN.ipynb
+++ b/basic_LightGCN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -57,17 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[   5,    9,   11,  ...,  933,    9,  681],\n",
-       "        [1682, 1682, 1682,  ..., 2140, 2141, 2143]], device='cuda:0')"
+       "Data(edge_index=[2, 160000], x=[2625, 24], rating=[160000], time=[160000], edge_label=[100000], edge_label_index=[2, 20000], node_type=[2625], edge_type=[160000])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,29 +81,51 @@
     "data = data.to_homogeneous().to(device)\n",
     "# 이새끼 호모지니어스로 바꾸면 엣지 라벨 순서가 바뀌어 버림\n",
     "data.edge_label_index = torch.stack([data.edge_label_index[1],data.edge_label_index[0]], dim = 0)\n",
-    "data.edge_label_index"
+    "data.edge_label_index\n",
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HeteroData(\n",
+      "  user={ num_nodes=52643 },\n",
+      "  book={ num_nodes=91599 },\n",
+      "  (user, rates, book)={\n",
+      "    edge_index=[2, 2380730],\n",
+      "    edge_label_index=[2, 603378],\n",
+      "  },\n",
+      "  (book, rated_by, user)={ edge_index=[2, 2380730] }\n",
+      ")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Data(edge_index=[2, 4761460], edge_label_index=[2, 603378], node_type=[144242], edge_type=[4761460])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 아마존\n",
     "path = osp.join('./', 'data', 'Amazon')\n",
     "dataset = AmazonBook(path)\n",
     "data = dataset[0]\n",
     "num_users, num_books = data['user'].num_nodes, data['book'].num_nodes\n",
-    "data = data.to_homogeneous().to(device)\n"
+    "data = data.to_homogeneous().to(device)\n",
+    "print(dataset[0])\n",
+    "data\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
