--- a/ss.ipynb
+++ b/ss.ipynb
@@ -256,12 +256,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'1': ['c'], '2': ['c', 'd'], '3': ['a']}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ad = {'1': ['a','b'], '2': ['c','d']}\n",
+    "bd = {'1': ['c'], '3': ['a']}\n",
+    "ad.update(bd)\n",
+    "ad"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "month_df"
-   ]
+   "source": []
   }
  ],
  "metadata": {
