--- a/continual.ipynb
+++ b/continual.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,21 +500,21 @@
     "        ).to(self.device)\n",
     "    \n",
     "    @torch.no_grad\n",
-    "    def rebuild_model(self, path, model_name, data, prev_num_user, prev_num_item, num_user, num_item):\n",
+    "    def rebuild_model(self, emb, prev_num_user, prev_num_item, num_user, num_item):\n",
     "        # 기존 모델에서 임베딩 가져옴 -> 유저와 아이템 기존의 갯수 만큼 나눔\n",
     "        prev_model = 0 # 기존 모델 불러오기\n",
-    "        prev_emb = prev_model.embedding.weight.detach()\n",
+    "        prev_emb = emb\n",
     "        prev_user_emb, prev_item_emb = prev_emb[:prev_num_user], prev_emb[prev_num_user:]\n",
     "\n",
-    "        avg_user_emb = torch.mean(prev_user_emb, dim = 1).repeat(num_user-prev_num_user)\n",
-    "        avg_item_emb = torch.mean(prev_item_emb, dim = 1).repeat(num_item-prev_num_item)\n",
+    "        avg_user_emb = torch.mean(prev_user_emb, dim = 0).repeat(num_user-prev_num_user,1)\n",
+    "        avg_item_emb = torch.mean(prev_item_emb, dim = 0).repeat(num_item-prev_num_item,1)\n",
     "\n",
     "\n",
     "\n",
-    "        new_user_emb = torch.stack([prev_user_emb, avg_user_emb], dim = 1)\n",
-    "        new_item_emb = torch.stack([prev_item_emb, avg_item_emb], dim = 1)\n",
+    "        new_user_emb = torch.stack([prev_user_emb, avg_user_emb])\n",
+    "        new_item_emb = torch.stack([prev_item_emb, avg_item_emb])\n",
     "        \n",
-    "        new_total_emb = torch.stack([new_user_emb, new_item_emb], dim = 1)\n",
+    "        new_total_emb = torch.stack([new_user_emb, new_item_emb])\n",
     "\n",
     "        self.model.embedding.data = new_total_emb.data\n",
     "\n",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,18 +608,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [01:10<00:00,  7.12it/s, loss=0.0445, precision=0.0622, recall=0.0264]\n",
-      "100%|██████████| 500/500 [00:20<00:00, 24.91it/s, loss=0.0303, precision=0.0383, recall=0.0372]\n",
-      "100%|██████████| 500/500 [00:19<00:00, 25.56it/s, loss=0.0254, precision=0.0134, recall=0.0235]\n",
-      "100%|██████████| 500/500 [00:19<00:00, 25.30it/s, loss=0.0129, precision=0.00917, recall=0.0103]  \n",
-      "100%|██████████| 500/500 [00:20<00:00, 24.18it/s, loss=0.00443, precision=0.00466, recall=0.017] \n"
+      "100%|██████████| 100/100 [00:14<00:00,  7.13it/s, loss=0.0926, precision=0.0452, recall=0.0213]\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "stack expects each tensor to be equal size, but got [489, 64] at entry 0 and [119, 64] at entry 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[254], line 34\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;124;03mTODO::\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;124;03m여기서 기존의 모델 가지고 온다음에 rebuild 수행 할 것   \u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 34\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrebuild_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbest_emb\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mn_user\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mn_item\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mn_user\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mn_item\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mAdam(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.001\u001b[39m)\n\u001b[1;32m     37\u001b[0m best_recall \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "File \u001b[0;32m~/jiwon/pygbased/.conda/lib/python3.9/site-packages/torch/utils/_contextlib.py:116\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m    114\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecorate_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    115\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 116\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[251], line 55\u001b[0m, in \u001b[0;36mContinualModel.rebuild_model\u001b[0;34m(self, emb, prev_num_user, prev_num_item, num_user, num_item)\u001b[0m\n\u001b[1;32m     50\u001b[0m avg_user_emb \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmean(prev_user_emb, dim \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mrepeat(num_user\u001b[38;5;241m-\u001b[39mprev_num_user,\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     51\u001b[0m avg_item_emb \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmean(prev_item_emb, dim \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mrepeat(num_item\u001b[38;5;241m-\u001b[39mprev_num_item,\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m---> 55\u001b[0m new_user_emb \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mprev_user_emb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mavg_user_emb\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     56\u001b[0m new_item_emb \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack([prev_item_emb, avg_item_emb], dim \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     58\u001b[0m new_total_emb \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack([new_user_emb, new_item_emb], dim \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: stack expects each tensor to be equal size, but got [489, 64] at entry 0 and [119, 64] at entry 1"
      ]
     }
    ],
@@ -627,16 +636,19 @@
     "from sklearn.model_selection import train_test_split\n",
     "data = Continual_Data()\n",
     "\n",
+    "best_emb = [0]*len(splitted_ml)\n",
+    "info = []\n",
     "for i in range(len(splitted_ml)-1):\n",
     "    if i == 0:\n",
     "        train, val = train_test_split(splitted_ml[i], test_size=0.2)\n",
     "        val, test = train_test_split(val, test_size=0.5)\n",
     "        graph_data, answer_set, data_info = data.make_dataset(train, val, test, 42)\n",
+    "        info.append(data_info)\n",
     "    else:\n",
     "        train = splitted_ml[i]\n",
     "        val, test = train_test_split(splitted_ml[i+1], test_size=0.5)\n",
     "        graph_data, answer_set, data_info = data.merge_dataset(train, val, test, data_info)\n",
-    "\n",
+    "        info.append(data_info)\n",
     "    graph_data.to(device)\n",
     "    batch_size = 1024\n",
     "    mask = graph_data.edge_train_index[0] < graph_data.edge_train_index[1]\n",
@@ -653,11 +665,12 @@
     "    TODO::\n",
     "    여기서 기존의 모델 가지고 온다음에 rebuild 수행 할 것   \n",
     "    \"\"\"\n",
-    "\n",
+    "    if i != 0:\n",
+    "        model.rebuild_model(best_emb[i-1], info[i-1].n_user, info[i-1].n_item, data_info.n_user, data_info.n_item)\n",
     "\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-    "\n",
-    "    with tqdm(range(500)) as tepoch:\n",
+    "    best_recall = 0\n",
+    "    with tqdm(range(100)) as tepoch:\n",
     "\n",
     "        for epoch in tepoch:\n",
     "            \n",
@@ -692,7 +705,11 @@
     "                total_loss += float(loss) * pos_rank.numel()\n",
     "                total_examples += pos_rank.numel()\n",
     "            recall, precision = evaluate(model, graph_data, answer_set, data_info,20, batch_size, device)\n",
-    "            tepoch.set_postfix(loss=total_loss / total_examples, recall = recall, precision = precision)"
+    "            if recall > best_recall:\n",
+    "                best_recall = recall\n",
+    "                best_emb[i] = model.model.embedding.weight.detach()\n",
+    "            tepoch.set_postfix(loss=total_loss / total_examples, recall = recall, precision = precision)\n",
+    "        "
    ]
   },
   {
